2003-10-23  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (AWK): Substitute and export it.
	* configure.in: Also check for AWK.

2003-10-07  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AC_PREREQ): Require 2.57.

2003-09-19  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in (AH_BOTTOM): Don't define HEAVYWEIGHT_INDEXING here.

2003-07-30  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-variables): Delete
	propagate_empty_matrices from the list.

	* ck-oct-fcns.m: Delete.

2003-07-25  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* configure.in: Warn if --enable-dl but not --enable-shared.

2003-07-15  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-variables): Delete
	default_return_value and define_all_return_values from the list.
	Add warn_undefined_return_values to the list.

2003-07-11  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-variables):
	Add warn_empty_list_elements and warn_resize_on_range_error to the
	list.
	Delete empty_list_elements_ok and resize_on_range_error from the
	list.

2003-07-10  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-variables): Add warn_neg_dim_as_zero
	to the list.
	Delete treat_neg_dim_as_zero from the list.

2003-07-09  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* emacs/octave-mod.el (octave-variables): Include
	DEFAULT_EXEC_PATH, DEFAULT_LOAD_PATH, crash_dumps_octave_core,
	sighup_dumps_octave_core, sigterm_dumps_octave_core,
	warn_imag_to_real, warn_num_to_str, warn_str_to_num, and
	warn_fortran_indexing in the list.
	Delete ok_to_lose_imaginary_part, implicit_num_to_str_ok,
	implicit_str_to_num_ok, prefer_column_vectors,
	prefer_zero_one_indexing, and do_fortran_indexing from the list.

2003-07-08  John W. Eaton  <jwe@bevo.che.wisc.edu>

	* Makeconf.in (do-subst-default-vals): Substitute OCTAVE_API_VERSION.
	* octave-config.in: Handle new variable OCTAVE_API_VERSION.
